--- a/kkkkk/k.html
+++ b/kkkkk/k.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="logo">KUFLIX</h1>
         <nav>
-            <ul class="lista">
+            <ul class="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#filmes">Filmes</a></li>
                 <li><a href="#series">Séries</a></li>
@@ -22,16 +22,25 @@
 
         <div class="container">
             <div class="cartao1">
-                <h2>Filme 1</h2>
-                <p>Descrição do filme 1.</p>
-            </div>
+                <img src="moana-2.jpg" alt="">
+                <h2>Moana 2</h2>
+                <p>Aventuras com moana <br><br><div class="avaliacao">Avaliação IMDb</div>
+                    <div class="estrela">⭐6,6/10 <br></div>
+                    <div class="vizu">101mil</div></p>
+                </div>
             <div class="cartao2">
-                <h2>Filme 2</h2>
-                <p>Descrição do filme 2.</p>
+                <img src="urso-pool1.jpg" alt="">
+                <h2>Ursinho pooh </h2>
+                <p>Muito sangue e mel <br><br><div class="avaliacao">Avaliação IMDb</div>
+                    <div class="estrela">⭐2,9/10 <br></div>
+                    <div class="vizu">34mil</div></p>
             </div>
             <div class="cartao3">
-                <h2>Filme 3</h2>
-                <p>Descrição do filme 3.</p>
+                <img src="urso-pool2.jpg" alt="">
+                <h2>Ursinho pooh 2</h2>
+                <p>Muito mel e sangue <br><br><div class="avaliacao">Avaliação IMDb</div>
+                    <div class="estrela">⭐4,7/10 <br></div>
+                    <div class="vizu">12mil</div></p>
             </div>
         </div>
     
