--- a/kkkkk/k.html
+++ b/kkkkk/k.html
@@ -25,21 +25,21 @@
                 <img src="moana-2.jpg" alt="">
                 <h2>Moana 2</h2>
                 <p>Aventuras com moana <br><br><div class="avaliacao">Avaliação IMDb</div>
-                    <div class="estrela">⭐6,6/10 <br></div>
+                    <div class="estrela"><a href="https://www.imdb.com/">⭐6,6/10 </a><br></div>
                     <div class="vizu">101mil</div></p>
                 </div>
             <div class="cartao2">
                 <img src="urso-pool1.jpg" alt="">
                 <h2>Ursinho pooh </h2>
                 <p>Muito sangue e mel <br><br><div class="avaliacao">Avaliação IMDb</div>
-                    <div class="estrela">⭐2,9/10 <br></div>
+                    <div class="estrela"><a href="https://www.imdb.com/">⭐2,9/10 </a><br></div>
                     <div class="vizu">34mil</div></p>
             </div>
             <div class="cartao3">
                 <img src="urso-pool2.jpg" alt="">
                 <h2>Ursinho pooh 2</h2>
                 <p>Muito mel e sangue <br><br><div class="avaliacao">Avaliação IMDb</div>
-                    <div class="estrela">⭐4,7/10 <br></div>
+                    <div class="estrela"><a href="https://www.imdb.com/">⭐4,7/10 </a><br></div>
                     <div class="vizu">12mil</div></p>
             </div>
         </div>
